--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -13,8 +13,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: soham2002/github-profile-3d-contrib@0.7.1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          USERNAME: ${{ github.repository_owner }}
+          GITHUB_TOKEN: ${{ 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 }}
+          USERNAME: ${{ soham2002 }}
       - name: Commit & Push
         run: |
           git config user.name github-actions
