--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -29,6 +29,11 @@ jobs:
           base: activity, community, repositories, metadata
           config_display: columns
           config_timezone: Asia/Kolkata
+          plugin_achievements: yes
+          plugin_achievements_display: compact
+          plugin_achievements_limit: 4
+          plugin_achievements_secrets: yes
+          plugin_achievements_threshold: A
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
           plugin_repositories: yes
